Fix positioning of twitter and events on Safari

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -165,7 +165,7 @@ select {
 
 #twitter {
   float: right;
-  width: 38%;
+  width: 37%;
   min-height: 440px;
   padding-left: 15px;
   border-left: 1px dotted #333;
