--- a/public/stylesheets/carousel/bodyarmor.css
+++ b/public/stylesheets/carousel/bodyarmor.css
@@ -31,7 +31,7 @@
 
 /* Events */
 #events .jcarousel-container {
-  padding: 5px 20px;
+  padding: 5px 21px;
 }
 
 #events .jcarousel-clip {
